--- a/src/Warehouse.Client/Pages/UnitForm.razor
+++ b/src/Warehouse.Client/Pages/UnitForm.razor
@@ -5,15 +5,16 @@
 @inject IApiAccess Api
 
 <CrudForm TDto="UnitDTO"
-                   Title="Единица измерения"
-                   Id="@Id"
-                   ReturnUrl="/units"
-                   LoadFunc="async id => await Api.GetUnit(id).ContinueWith(t => (t.Result.Result, t.Result.Response))"
-                   SaveFunc="async dto => (Id == Guid.Empty
-                                           ? (await Api.CreateUnit(dto)).Result
-                                           : (await Api.UpdateUnit(dto)).Result)"
-                   DeleteFunc="async id => (await Api.ArchiveUnit(id)).Result"
-                   ArchiveFunc="async id => (await Api.ArchiveUnit(id)).Result">
+          Title="Единица измерения"
+          Id="@Id"
+          ReturnUrl="/units"
+          LoadFunc="async id => await Api.GetUnit(id).ContinueWith(t => (t.Result.Result, t.Result.Response))"
+          SaveFunc="async dto => (Id == Guid.Empty
+                                                     ? (await Api.CreateUnit(dto)).Result
+                                                     : (await Api.UpdateUnit(dto)).Result)"
+          DeleteFunc="async id => (await Api.DeleteUnit(id)).Result"
+          ArchiveFunc="async id => (await Api.ArchiveUnit(id)).Result"
+          UnarchiveFunc="async id => (await Api.UnarchiveUnit(id)).Result">
     <Template Context="model">
         <MudTextField Label="Наименование" @bind-Value="model.Name" />
     </Template>
