--- a/src/Warehouse.Client/Pages/Clients.razor
+++ b/src/Warehouse.Client/Pages/Clients.razor
@@ -1,4 +1,5 @@
 ﻿@page "/clients"
+@page "/clients/{view:int}"
 @using Warehouse.Client.Components
 @using Warehouse.Client.Services
 @using Warehouse.Shared.DTO
@@ -11,8 +12,24 @@
 <h3>Клиенты</h3>
 
 <MudStack Row="true" Spacing="2" Class="mb-4">
-    <MudButton Variant="Variant.Filled" OnClick='() => Nav.NavigateTo("clients/form/00000000-0000-0000-0000-000000000000")'>Добавить</MudButton>
-    <MudButton Variant="Variant.Outlined" OnClick='() => Nav.NavigateTo("/clients/archive")'>К архиву</MudButton>
+     @if (View == 2)
+    {
+        <MudButton Variant="Variant.Outlined"
+                   OnClick='() => Nav.NavigateTo("/clients/1")'>
+            К рабочим
+        </MudButton>
+    }
+    else
+    {
+        <MudButton Variant="Variant.Filled"
+                   OnClick='() => Nav.NavigateTo("/clients/form/00000000-0000-0000-0000-000000000000")'>
+            Добавить
+        </MudButton>
+        <MudButton Variant="Variant.Outlined"
+                   OnClick='() => Nav.NavigateTo("/clients/2")'>
+            К архиву
+        </MudButton>
+    }
 </MudStack>
 
 @if (_isLoading)
@@ -35,16 +52,20 @@ else
 }
 
 @code {
+    [Parameter] public int View { get; set; } = 1;
+
     private IEnumerable<ClientDTO> _clients = Array.Empty<ClientDTO>();
     private bool _isLoading = true;
 
-    protected override async Task OnInitializedAsync()
+    protected override async Task OnParametersSetAsync()
     {
-        var res = await Api.GetClients(false);
+        _isLoading = true;
+
+        var res = await Api.GetClients(View == 2);
 
         if (res.Result == ResultCode.Ok && res.Response is not null)
         {
-            _clients = res.Response;
+            _clients = View == 2 ? res.Response.Where(dto => dto.IsArchived) : res.Response;
         }
         else
         {
