--- a/src/Warehouse.Client/Pages/Resources.razor
+++ b/src/Warehouse.Client/Pages/Resources.razor
@@ -1,4 +1,5 @@
 ﻿@page "/resources"
+@page "/resources/{view:int}"
 @using Warehouse.Client.Components
 @using Warehouse.Client.Services
 @using Warehouse.Shared.DTO
@@ -11,14 +12,24 @@
 <h3>Ресурсы</h3>
 
 <MudStack Row="true" Spacing="2" Class="mb-4">
-    <MudButton Variant="Variant.Filled"
-               OnClick='() => Nav.NavigateTo("/resources/form/00000000-0000-0000-0000-000000000000")'>
-        Добавить
-    </MudButton>
-    <MudButton Variant="Variant.Outlined"
-               OnClick='() => Nav.NavigateTo("/resources/archive")'>
-        К архиву
-    </MudButton>
+    @if (View == 2)
+    {
+        <MudButton Variant="Variant.Outlined"
+                   OnClick='() => Nav.NavigateTo("/resources/1")'>
+            К рабочим
+        </MudButton>
+    }
+    else
+    {
+        <MudButton Variant="Variant.Filled"
+                   OnClick='() => Nav.NavigateTo("/resources/form/00000000-0000-0000-0000-000000000000")'>
+            Добавить
+        </MudButton>
+        <MudButton Variant="Variant.Outlined"
+                   OnClick='() => Nav.NavigateTo("/resources/2")'>
+            К архиву
+        </MudButton>
+    }
 </MudStack>
 
 @if (_isLoading)
@@ -42,16 +53,20 @@ else
 }
 
 @code {
+    [Parameter] public int View { get; set; } = 1;
+
     private IEnumerable<ResourceDTO> _resources = Array.Empty<ResourceDTO>();
     private bool _isLoading = true;
 
-    protected override async Task OnInitializedAsync()
+    protected override async Task OnParametersSetAsync()
     {
-        var res = await Api.GetAllResources(false);
+        _isLoading = true;
+
+        var res = await Api.GetAllResources(View == 2);
 
         if (res.Result == ResultCode.Ok && res.Response is not null)
         {
-            _resources = res.Response;
+            _resources = View == 2 ? res.Response.Where(dto => dto.IsArchived) : res.Response;
         }
         else
         {
