--- a/src/Warehouse.Client/Components/Shipments/ShipmentFiltersCollection.razor
+++ b/src/Warehouse.Client/Components/Shipments/ShipmentFiltersCollection.razor
@@ -13,13 +13,14 @@
             </MudStack>
         </MudItem>
         <MudItem xs="12" sm="6" md="3">
-            <MudSelect T="string" Label="Номер отгрузки" @bind-Value="_selectedNumber" Dense="true">
-                <MudSelectItem T="string" Value="string.Empty">Выбрать</MudSelectItem>
-                @foreach (var num in _numbers)
-                {
-                    <MudSelectItem T="string" Value="@num">@num</MudSelectItem>
-                }
-            </MudSelect>
+	        <MudText Typo="Typo.subtitle2">Номер отгрузки</MudText>
+	        <MudSelect T="string" @bind-Value="_selectedNumber" Dense="true">
+		        <MudSelectItem T="string" Value="string.Empty">Выбрать</MudSelectItem>
+		        @foreach (var num in _numbers)
+		        {
+			        <MudSelectItem T="string" Value="@num">@num</MudSelectItem>
+		        }
+	        </MudSelect>
         </MudItem>
         <MudItem xs="12" sm="6" md="2">
             <MudSelect T="Guid" Label="Клиент" @bind-Value="_selectedClient" Dense="true">
