--- a/src/Warehouse.Client/Components/Shipments/ShipmentTable.razor
+++ b/src/Warehouse.Client/Components/Shipments/ShipmentTable.razor
@@ -12,13 +12,16 @@
         <MudTh>Кол-во</MudTh>
     </HeaderContent>
     <RowTemplate>
-        <MudTd DataLabel="Номер">@context.Number</MudTd>
-        <MudTd DataLabel="Дата">@context.Date.ToString("yyyy-MM-dd")</MudTd>
-        <MudTd DataLabel="Клиент">@context.Client.Name</MudTd>
-        <MudTd DataLabel="Статус">@context.Status</MudTd>
-        <MudTd DataLabel="Ресурс">@((MarkupString)string.Join("<br/>", context.Items.Select(i => i.Resource.Name)))</MudTd>
-        <MudTd DataLabel="Ед. изм.">@((MarkupString)string.Join("<br/>", context.Items.Select(i => i.Unit.Name)))</MudTd>
-        <MudTd DataLabel="Кол-во">@((MarkupString)string.Join("<br/>", context.Items.Select(i => i.Quantity)))</MudTd>
+	    @{
+		    var visibleItems = context.Items.Where(i => i.Quantity > 0).ToList();
+	    }
+	    <MudTd DataLabel="Номер">@context.Number</MudTd>
+	    <MudTd DataLabel="Дата">@context.Date.ToString("yyyy-MM-dd")</MudTd>
+	    <MudTd DataLabel="Клиент">@context.Client.Name</MudTd>
+	    <MudTd DataLabel="Статус">@context.Status</MudTd>
+        <MudTd DataLabel="Ресурс">@((MarkupString)string.Join("<br/>", visibleItems.Select(i => i.Resource.Name)))</MudTd>
+        <MudTd DataLabel="Ед. изм.">@((MarkupString)string.Join("<br/>", visibleItems.Select(i => i.Unit.Name)))</MudTd>
+        <MudTd DataLabel="Кол-во">@((MarkupString)string.Join("<br/>", visibleItems.Select(i => i.Quantity)))</MudTd>
     </RowTemplate>
     <NoRecordsContent>Нет данных для отображения</NoRecordsContent>
 </MudTable>
