--- a/src/Warehouse.Client/Components/Balances/BalanceFiltersCollection.razor
+++ b/src/Warehouse.Client/Components/Balances/BalanceFiltersCollection.razor
@@ -4,95 +4,86 @@
 @inject IApiAccess Api
 
 <MudPaper Class="pa-4 mb-4">
-    <MudGrid>
-        <MudItem xs="12" sm="4">
-            <MudSelect T="Guid"
-                       Label="Ресурс"
-                       @bind-Value="_selectedResource"
-                       Dense="true">
-                <MudSelectItem T="Guid" Value="Guid.Empty">
-                    Выбрать
-                </MudSelectItem>
-                @foreach (var resource in _resources)
-                {
-                    <MudSelectItem T="Guid" Value="@resource.Id">
-                        @resource.Name
-                    </MudSelectItem>
-                }
-            </MudSelect>
-        </MudItem>
+	<MudGrid>
+		<MudItem xs="12" sm="4">
+			<MudSelect T="ResourceDTO"
+					   Label="Ресурс"
+					   @bind-SelectedValues="_selectedResources"
+					   MultiSelection="true"
+					   Dense="true">
+				@foreach (var resource in _resources)
+				{
+					<MudSelectItem T="ResourceDTO" Value="@resource">
+						@resource.Name
+					</MudSelectItem>
+				}
+			</MudSelect>
+		</MudItem>
 
-        <MudItem xs="12" sm="4">
-            <MudSelect T="Guid"
-                       Label="Единица измерения"
-                       @bind-Value="_selectedUnit"
-                       Dense="true">
-                <MudSelectItem T="Guid" Value="Guid.Empty">
-                    Выбрать
-                </MudSelectItem>
-                @foreach (var unit in _units)
-                {
-                    <MudSelectItem T="Guid" Value="@unit.Id">
-                        @unit.Name
-                    </MudSelectItem>
-                }
-            </MudSelect>
-        </MudItem>
+		<MudItem xs="12" sm="4">
+			<MudSelect T="UnitDTO"
+					   Label="Единица измерения"
+					   @bind-SelectedValues="_selectedUnits"
+					   MultiSelection="true"
+					   Dense="true">
+				@foreach (var unit in _units)
+				{
+					<MudSelectItem T="UnitDTO" Value="@unit">
+						@unit.Name
+					</MudSelectItem>
+				}
+			</MudSelect>
+		</MudItem>
 
-        <MudItem xs="12" sm="4" Class="d-flex align-center">
-            <MudButton Variant="Variant.Filled"
-                       OnClick="Apply"
-                       Disabled="_isLoading">
-                Применить
-            </MudButton>
-        </MudItem>
-    </MudGrid>
+		<MudItem xs="12" sm="4" Class="d-flex align-center">
+			<MudButton Variant="Variant.Filled"
+					   OnClick="Apply"
+					   Disabled="_isLoading">
+				Применить
+			</MudButton>
+		</MudItem>
+	</MudGrid>
 </MudPaper>
 
 @code {
-    [Parameter]
-    public EventCallback<BalanceFilter> OnApply { get; set; }
+	[Parameter]
+	public EventCallback<BalanceFilter> OnApply { get; set; }
 
-    private IEnumerable<ResourceDTO> _resources = new List<ResourceDTO>();
-    private IEnumerable<UnitDTO> _units = new List<UnitDTO>();
-    private Guid _selectedResource = Guid.Empty;
-    private Guid _selectedUnit = Guid.Empty;
-    private bool _isLoading;
+	private IEnumerable<ResourceDTO> _resources = new List<ResourceDTO>();
+	private IEnumerable<UnitDTO> _units = new List<UnitDTO>();
+	private IEnumerable<ResourceDTO> _selectedResources = new List<ResourceDTO>();
+	private IEnumerable<UnitDTO> _selectedUnits = new List<UnitDTO>();
+	private bool _isLoading;
 
-    protected override async Task OnInitializedAsync()
-    {
-        _isLoading = true;
+	protected override async Task OnInitializedAsync()
+	{
+		_isLoading = true;
 
-        var resResult = await Api.GetAllResources(false);
+		var resResult = await Api.GetAllResources(false);
 
-        if (resResult.Result == ResultCode.Ok && resResult.Response != null)
-        {
-            _resources = resResult.Response;
-        }
+		if (resResult.Result == ResultCode.Ok && resResult.Response != null)
+		{
+			_resources = resResult.Response;
+		}
 
-        var unitResult = await Api.GetAllUnits(false);
+		var unitResult = await Api.GetAllUnits(false);
 
-        if (unitResult.Result == ResultCode.Ok && unitResult.Response != null)
-        {
-            _units = unitResult.Response;
-        }
+		if (unitResult.Result == ResultCode.Ok && unitResult.Response != null)
+		{
+			_units = unitResult.Response;
+		}
 
-        _isLoading = false;
-    }
+		_isLoading = false;
+	}
 
-    private async Task Apply()
-    {
-        var filter = new BalanceFilter
-        {
-            ResourceIds = _selectedResource != Guid.Empty
-                          ? new List<Guid> { _selectedResource }
-                          : null,
+	private async Task Apply()
+	{
+		var filter = new BalanceFilter
+			{
+				ResourceIds = _selectedResources.Select(r => r.Id).ToList(),
+				UnitIds = _selectedUnits.Select(u => u.Id).ToList()
+			};
 
-            UnitIds = _selectedUnit != Guid.Empty
-                      ? new List<Guid> { _selectedUnit }
-                      : null
-        };
-
-        await OnApply.InvokeAsync(filter);
-    }
+		await OnApply.InvokeAsync(filter);
+	}
 }
